[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langstream-ai"
version = "0.1.0"
authors = []
description = "LangStream user API"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LangStream/langstream"
"Bug Tracker" = "https://github.com/LangStream/langstream/issues"
