#
# Copyright DataStax, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langstream-ai"
# === Warning: do not touch this section. The package version is set by regexp
version = "0.0.0"
# ===
authors = [
    {name = "Christophe Bornet", email = "christophe.bornet@datastax.com"}
]
description = "LangStream user API"
requires-python = ">=3.5"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    #
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["streaming", "ai", "llm"]
dynamic = ["readme"]

[project.urls]
"Homepage" = "https://github.com/LangStream/langstream"
"Bug Tracker" = "https://github.com/LangStream/langstream/issues"

[tool.setuptools]
packages = ["langstream"]
py-modules = ['langstream.api', 'langstream.util']

[tool.ruff]
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "proto",
]

