#
# Copyright DataStax, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langstream-ai"
# === Warning: do not touch this section. The package version is set by regexp
version = "0.0.0"
# ===
description = "LangStream user API"
license = "Apache-2.0"
authors = ["LangStream"]
readme = ["README.md"]
homepage = "https://langstream.ai"
repository = "https://github.com/LangStream/langstream"
documentation = "https://docs.langstream.ai"
keywords = ["streaming", "ai", "llm"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    #
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "langstream" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LangStream/langstream/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
grpcio = "^1.60.0"
protobuf = "^4.25.1"
fastavro = "^1.9.2"

[tool.poetry.group.full]
optional = true

[tool.poetry.group.full.dependencies]
openai = {extras = ["datalib"], version = "^1.6.1"}
langchain = {extras = ["openai"], version = "^0.0.353"}
langserve = "^0.0.37"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
boto3 = "^1.34.11"
unstructured = "^0.11.6"
llama-index = "^0.9.24"
cassio = "^0.1.3"

# workaround for https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = "<2"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
black = "^23.12.1"
ruff = "^0.1.9"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
grpcio-tools = "^1.60.0"

[tool.ruff]
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "proto",
]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
